feat: thunderung herd 방지를 위한 ReentrantLock 적용 및 cache-aside 패턴 적용